fix: wrong padding

--- a/src/app/(main)/(components)/indexes/styles.module.scss
+++ b/src/app/(main)/(components)/indexes/styles.module.scss
@@ -40,11 +40,7 @@
   @media (max-width: calc($max-content-width + 80px)) {
     grid-template-columns: 1fr;
   }
-
-  @media (max-width: $mobile-breakpoint) {
-    @include mobile-padding;  
-  }
-
+  
   & > .item {
     margin: 0 auto;  
     max-width: 500px;
@@ -72,7 +68,11 @@
 
         & > .rate {
           text-align: right;
-          padding-right: 20px;
+          padding-right: 60px;
+
+          @media (max-width: calc($max-content-width + 80px)) {
+            padding-right: 0;
+          }
 
           &[data-up="true"] {
             color: $color-red;
